--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     /* font-style: italic; */
     font-weight: 500;
     font-size:40px;
-    color: burlywood;
+    color: #ffa700;
   }
   
   .container {
@@ -37,11 +37,8 @@ body {
   
   select {
     padding: 5px;
-    margin-left: 10px;
-  }
-  select {
-    padding: 5px;
     margin-top: 10px;
+    margin-left: 10px;
     width: 200px;
   }
     
