--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,16 @@ body {
   h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     /* font-style: italic; */
-    font-weight: 500;
-    font-size:40px;
-    color: #ffa700;
+    font-weight: bolder;
+    font-size:50px;
+    color: #c32727;
   }
-  
+  label{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+    color: rgb(57, 2, 2);
+    font-weight: bold;
+  }
   .container {
     text-align: center;
   }
@@ -25,20 +30,11 @@ body {
     margin-top: 20px;
   }
   
-  button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    cursor: pointer;
-    background-color:rgb(234, 204, 8);
-    color:rgb(2, 74, 2);
-    border: none;
-    border-radius: 5px;
-  }
-  
   select {
     padding: 5px;
     margin-top: 10px;
     margin-left: 10px;
     width: 200px;
+    border-radius: 15px;
   }
     
